refactor: architectural cleanup across all modules
Delete broken/dead JNI utilities (JniConcurrencyManager,
JniPhantomReferenceManager, WasiResourceLeakDetector), fix
JniResourceCache to proper LRU eviction, consolidate duplicate code
into base module (WasiFileOperation, WasiSecurityValidator,
DefaultSimdOperations, WitJavaObjectMarshaler), remove duplicate WASI
classes in Panama root, split NativeFunctionBindings (15K lines) into
9 domain classes, and extract 14 inner classes from PanamaGcRuntime.

Also removes WasmIntrospector stubs, unused BindgenConfig prefix/suffix
fields, and fixes PanamaExperimentalFeatures package mismatch.

All 18,673 tests pass across all modules.